@@ -3,8 +3,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_24
-    targetCompatibility = JavaVersion.VERSION_24
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
 
     withJavadocJar()
     withSourcesJar()
@@ -31,12 +31,14 @@ dependencies {
 
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
-    options.release.set(24)
+    options.release.set(25)
+    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
     maxHeapSize = "1024M"
+    jvmArgs("--enable-preview")
     testLogging {
         events("passed", "skipped", "failed")
     }
@@ -45,7 +47,7 @@ tasks.withType<Test> {
 tasks.withType<Javadoc> {
     options {
         encoding("UTF-8")
-        source(JavaVersion.VERSION_24.majorVersion)
+        source(JavaVersion.VERSION_25.majorVersion)
         (this as StandardJavadocDocletOptions).apply {
             addStringOption("Xdoclint:none", "-quiet")
             tags("apiNote:a:API Note:", "implNote:a:Implementation Note:")
